--- a/hardway_webgame/holly_grail/templates/hello_form.html
+++ b/hardway_webgame/holly_grail/templates/hello_form.html
@@ -1,7 +1,6 @@
-<h1>Fill Out This Form</h1>
-<form action="/hello" method="POST">
-A Greeting: <input type="text" name="greet">
-<br/>
+<h1>Start Game</h1>
+<form action="/game" method="POST">
+
 Your Name: <input type="text" name="name">
 <br/>
 <input type="submit">
