--- a/webapp-python/templates/__base__.html
+++ b/webapp-python/templates/__base__.html
@@ -18,28 +18,21 @@
         <div class="uk-container uk-container-center">
             <a href="/" class="uk-navbar-brand">Awesome</a>
             <ul class="uk-navbar-nav">
-                <li data-url="blogs"><a href="/"><i class="uk-icon-home"></i> 日志</a></li>
-                <li><a target="_blank" href="#"><i class="uk-icon-book"></i> 教程</a></li>
-                <li><a target="_blank" href="#"><i class="uk-icon-code"></i> 源码</a></li>
-                <li><a target="_blank" href="/manage/blogs/creates"><i class="uk-icon-code"></i> create blog</a></li>
-            </ul>
-            <div class="uk-navbar-flip">
-                <ul class="uk-navbar-nav">
+                <li data-url="blogs"><a href="/"><i class="uk-icon-home"></i> Blogs</a></li>
+                <li><a target="_blank" href="#"><i class="uk-icon-book"></i> Course</a></li>
+                <li><a target="_blank" href="#"><i class="uk-icon-code"></i> Code</a></li>
                 {% if user %}
-                    <li class="uk-parent" data-uk-dropdown>
-                        <a href="#0"><i class="uk-icon-user"></i> {{ user.name }}</a>
-                        <div class="uk-dropdown uk-dropdown-navbar">
-                            <ul class="uk-nav uk-nav-navbar">
-                                <li><a href="/signout"><i class="uk-icon-sign-out"></i> 登出</a></li>
-                            </ul>
-                        </div>
-                    </li>
+                    <a href="#0"><i class="uk-icon-user"></i> {{ user }}</a>
+                    <li><a target="_blank" href="/signout"><i class="uk-icon-book"></i> Signout</a></li>
+                    <li><a target="_blank" href="/manage/blogs/creates"><i class="uk-icon-code"></i> Create Blog</a></li>
+                    <li><a target="_blank" href="/blogs_by_page"><i class="uk-icon-book"></i> Blog by Page</a></li>
                 {% else %}
-                    <li><a href="/authenticate"><i class="uk-icon-sign-in"></i> 登陆</a></li>
-                    <li><a href="/register"><i class="uk-icon-edit"></i> 注册</a></li>
+                    <li><a target="_blank" href="/authenticate"><i class="uk-icon-book"></i> Log In</a></li>
+                    <li><a target="_blank" href="/register"><i class="uk-icon-code"></i> Register</a></li>
+                    
                 {% endif %}
-                </ul>
-            </div>
+            </ul>
+            
         </div>
     </nav>
 
