--- a/webapp-python/templates/login.html
+++ b/webapp-python/templates/login.html
@@ -1,6 +1,6 @@
 {% extends '__base__.html' %}
 
-{% block title %}注册{% endblock %}
+{% block title %}login{% endblock %}
 
 {% block beforehead %}
 
